# dpm_tools

./: .gitattributes  .gitignore  CITATION.cff  LICENSE  README.md  Tutorial_3d.py  codemeta.json  pyproject.toml  requirements.txt  setup.py
.github/workflows/: docs.yml  publish.yml  tests.yml
data/: 35_1.tiff  3_fractures.raw  3_fractures.tif  Initial_1_00000.tiff  Initial_1_00001.tiff  berea_pore.raw  berea_pore.tif
data/3d_spherepack_project175/: read_resize_jupyter.ipynb
docs/: conf.py  dpm_tools.io.rst  dpm_tools.metrics.rst  dpm_tools.morphology.rst  dpm_tools.rst  dpm_tools.visualization.rst  index.rst  modules.rst
docs/_templates/: base_tmpl.rst
docs/getting-started/: authors.rst  index.rst  installation.rst
docs/modules/: index.rst
docs/tutorial/: index.rst  tutorial-heterogeneity-classifier.ipynb  tutorial-minkowski-functionals.ipynb
doctrees/: environment.pickle  index.doctree
doctrees/examples/: quick_start.doctree
doctrees/examples/metrics/maps/: distance_transforms.doctree  ellipse_area.doctree  maximum_inscribed_sphere.doctree  minkowski_map.doctree  morphological_drainage.doctree  time_of_flight.doctree
doctrees/examples/metrics/scalars/: heterogeneity-classifier.doctree  minkowski-functionals.doctree
doctrees/examples/segmentation/: seeded_region_growing.doctree  statistical_region_merging.doctree
doctrees/examples/visualization/: 3D_visualization.doctree  competent_subset.doctree
doctrees/getting-started/: authors.doctree  index.doctree  installation.doctree
doctrees/modules/: index.doctree
doctrees/tutorial/: index.doctree  tutorial-heterogeneity-classifier.doctree  tutorial-minkowski-functionals.doctree
doctrees/tutorials/: index.doctree
doctrees/tutorials/general/: index.doctree
doctrees/tutorials/metrics/: index.doctree  maps.doctree  scalars.doctree
doctrees/tutorials/segmentation/: index.doctree
doctrees/tutorials/visualization/: index.doctree
dpm_tools/: __init__.py
dpm_tools/io/: __init__.py  _io_utils.py  _read_data.py  _write_data.py  io_utils.py  read_data.py  write_data.py
dpm_tools/metrics/: __init__.py  _feature_utils.py  _features.py  _fft_backends.py  _maps.py  _minkowski_coeff.py  _minkowski_utils.py  _scalars.py  binary_configs.pyx  feature_utils.py  features.py  maps.py  minkowski_cuda.py  scalars.py
dpm_tools/morphology/: __init__.py  _feature_utils.py  features.py
dpm_tools/segmentation/: __init__.py  _segment.py  segment.py
dpm_tools/visualization/: _3d_vis_utils.py  __init__.py  _plot_2d.py  _plot_3d.py  _vis_utils.py  plot_2d.py  plot_3d.py
examples/: 3D_Visualization_Tools_Tutorial.ipynb  3D_vis.py  Tutorial_3d.py  Vector_Field_Visualization_Tutorial.ipynb  Visualization_Tools_Tutorial.ipynb  combine_tiff_slices_using_dpm_tools.ipynb  grayscale_filtering.py  image_file_conversions_using_dpm_tools.ipynb  morphdrain_example.py  morphological_features.py  segmentation_example.py  single_phase_vis.py  stack_tiff.py
examples/figures/: histogram_csv.csv.csv
examples/metrics/maps/: distance_transforms.ipynb
examples/metrics/scalars/: heterogeneity-classifier.ipynb  minkowski-functionals.ipynb
examples/segmentation/: seeded_region_growing.ipynb
examples/visualization/: 3D_visualization.ipynb
html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
html/_modules/: index.html
html/_modules/dpm_tools/io/: _io_utils.html  _read_data.html  _write_data.html
html/_modules/dpm_tools/metrics/: _feature_utils.html  _maps.html  _scalars.html
html/_modules/dpm_tools/segmentation/: _segment.html
html/_sources/: index.rst.txt
html/_sources/examples/: quick_start.ipynb.txt
html/_sources/getting-started/: index.rst.txt  installation.rst.txt
html/_sources/modules/: index.rst.txt
html/_sources/tutorials/: index.rst.txt
html/_static/: 374_06_00_256.mat
html/examples/: quick_start.html
html/examples/segmentation/: seeded_region_growing.html  statistical_region_merging.html
html/examples/visualization/: 3D_visualization.html  competent_subset.html
html/getting-started/: authors.html  index.html  installation.html
html/modules/: index.html
html/tutorial/: index.html  tutorial-heterogeneity-classifier.html  tutorial-minkowski-functionals.html
html/tutorials/: index.html
html/tutorials/general/: index.html
html/tutorials/metrics/: index.html  maps.html  scalars.html
html/tutorials/segmentation/: index.html
html/tutorials/visualization/: index.html
jupyter_execute/examples/: quick_start.ipynb
jupyter_execute/examples/segmentation/: seeded_region_growing.ipynb  statistical_region_merging.ipynb
jupyter_execute/examples/visualization/: 3D_visualization.ipynb  competent_subset.ipynb
jupyter_execute/tutorial/: tutorial-heterogeneity-classifier.ipynb  tutorial-minkowski-functionals.ipynb
requirements/: docs.txt  tests.txt
test/: test_io.py
test/unit/: test_io.py  test_metrics.py  test_segmentation.py  test_visualization.py
(+31 files in other folders)
